# HSI_KUKA

./: .gitmodules  README.md
checkerboard/: CMakeLists.txt  README.md  package.xml
checkerboard/launch/: moveit_checkerboard_motion.launch  moveit_checkerboard_motion2.launch  moveit_checkerboard_motion3.launch
checkerboard/src/: checkerboard_motion.py  checkerboard_motion2.py  (+1 more)
med7pf/med7pf_description/: CMakeLists.txt  package.xml
med7pf/med7pf_description/launch/: med7pf_upload.launch
med7pf/med7pf_description/urdf/: med7pf.urdf.xacro
med7pf/med7pf_gazebo/: CMakeLists.txt  package.xml
med7pf/med7pf_gazebo/launch/: med7pf_gazebo.launch  med7pf_world.launch
med7pf_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
photonfocus_camera_description/: CMakeLists.txt  package.xml
photonfocus_camera_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
photonfocus_camera_description/meshes/: Component2_1_1_1.stl  Component2_1_1_1_1.stl  Component3_1_1_1.stl  Component3_1_1_1_1.stl  Component4_1_1_1.stl  Component4_1_1_1_1.stl  Component5_1_1_1.stl  Component5_1_1_1_1.stl  Component6_1_1_1.stl  Component6_1_1_1_1.stl  Component7_1_1_1.stl  Component7_1_1_1_1.stl  Component8_1_1_1.stl  Component8_1_1_1_1.stl  base_link.stl  link_1.stl  link_2.stl
photonfocus_camera_description/urdf/: materials.xacro  photonfocus_camera.gazebo  photonfocus_camera.gazebo.xacro  photonfocus_camera.trans  photonfocus_camera.urdf.xacro  photonfocus_camera.xacro
photonfocus_camera_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+74 files in other folders)
