<?xml version="1.0"?>
<package format="2">
  <name>photonfocus_camera_description</name>
  <version>0.0.0</version>
<description>The photonfocus_camera_description package</description>
  <maintainer email="anisha.bahl@kcl.ac.uk">anishabahl</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
