<?xml version="1.0"?>
<package format="2">
  <name>med7pf_gazebo</name>
  <version>1.0.0</version>
  <description>med7pf_gazebo</description>
  <maintainer email="anisha.bahl@kcl.ac.uk">anishabahl</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>lbr_control</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>photonfocus_camera_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
